Personal Website updates

--- a/index.html
+++ b/index.html
@@ -3,26 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rachel Website</title>
+    <title>Rachel Davis</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
    <header>
-    <nav> 
-        <div></div>
-
+    <div class="header-container">
+       
+    <nav>  
+        <div id="logo">
+            <h1>Rachel Davis</h1>
+        </div>
+        <div id="links">     
+            <a href="index.html"></a> Home</a>
+            <a href="about.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </nav> 
-   </header>
-   
-   <main>
+    </header>
+    
+    <main>
+        <div class="container-1"> 
+            <div class="content-with-image">   
+                <div>
+                    <h2>Developer</h2>
+                    <p>Intersting things about me. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, blanditiis aliquam numquam nisi voluptatem consectetur dolorem repellendus harum explicabo iusto quaerat ipsam earum error itaque rem voluptas autem veniam iste?</p>                    
+                </div>
+                <img src="images/rabbitinhat.jpg" alt="tree pic">
+            </div>
+            <div> 
+                <h3 class="quote"></h3><em>"A very nice inspirational quote from someone placed here. -Important Person Name"</em></h3>  
+            </div>
 
+        </div>
 
+    </main> 
 
-   </main> 
-
-
-
-    <footer> </footer>
+    <footer> 
+        <a href="https://www.facebook.com" target="_blank">
+            <img src="images/facebook.svg" alt="facebook icon">  
+        </a>
+        <a href="https://www.linkedin.com" target="_blank">
+            <img src="images/linkedin.svg" alt="linkedin icon"> 
+        </a>
+        <a href="https://www.twitter.com" target="_blank">
+            <img src="images/twitter.svg" alt="twitter icon">
+        </a>
+    </footer>
     <script src="index.js"></script>       
 </body>
 </html>
