Personal Website updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rachel Davis</title>
+    <title>Personal Website</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <h1>Rachel Davis</h1>
         </div>
         <div id="links">     
-            <a href="index.html"></a> Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
@@ -33,7 +33,7 @@
                 <img src="images/rabbitinhat.jpg" alt="tree pic">
             </div>
             <div> 
-                <h3 class="quote"></h3><em>"A very nice inspirational quote from someone placed here. -Important Person Name"</em></h3>  
+                <h3 class="quote"></h3><em>"When you find something that you love to do, you'll never work a day in your life. - Confucius"</em></h3>  
             </div>
 
         </div>
