--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,76 @@
-<!--  -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="portfolio.css">
+</head>
+<body>
+   <header>
+    <div class="header-container">
+        <nav>
+            <div id="logo">
+                <h1>Rachel Davis</h1>
+            </div>
+            <div id="links">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </nav>
+    </div>
+    </header>
+    
+    <main>
+        <div class="container-1">
+            <div class="content-with-image">
+            </div>
+                <h1 id="Project Header">
+                Things I've built, in no particular order.</p>
+                </h1>
+            <div id="project-container">
+            </div>
+            <section class="project">
+                <h2> The First Project</h2>
+                <div class="project-content">
+                    <img src="images/firstproject.jpg" alt="woodworking project">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nihil doloremque voluptas consectetur, incidunt debitis veritatis minus cumque natus consequuntur. Nihil officiis qui ea esse vero fuga omnis est quam.</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis earum veniam voluptatum autem sit aut, magni fugit atque ab. Inventore impedit nulla repellat amet possimus illum earum incidunt ab voluptatibus!</p>
+                </div>
+                
+            </section>
+            <section class="project">
+                <h2> The Second Project</h2>
+                <div class="project-content">
+                    <img src="images/secondproject.jpg" alt="painting project">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut perspiciatis nobis omnis commodi sunt dicta recusandae, qui sed sit at molestias. Enim consequuntur cupiditate tempora earum facilis ratione natus animi.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est dicta doloribus quae facere totam ducimus asperiores laborum quo labore! Rem, nam consequuntur eveniet voluptates accusantium consequatur itaque magnam dolorem animi.</p>
+                </div>
+            </section>
+            <section class="project">
+                <h2> The Third Project</h2>
+                <div class="project-content">
+                    <img src="images/thirdproject.jpg" alt="film project">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, nisi maiores, voluptates doloremque repellat autem temporibus doloribus inventore repellendus vel veniam quod! Fugit aliquid laboriosam impedit harum illo, hic assumenda.</p>   
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt consequatur doloremque nesciunt inventore sapiente ratione praesentium excepturi quidem, labore porro, consectetur reiciendis doloribus eius repellat quasi eveniet amet voluptates at.</p>
+                </div>
+            </section>
+            </div>
+    </main> 
+    <footer>
+        <a href="https://www.facebook.com" target="_blank">
+            <img src="images/facebook.svg" alt="facebook icon">
+        </a>
+        <a href="https://www.linkedin.com" target="_blank">
+            <img src="images/linkedin.svg" alt="linkedin icon">
+        </a>
+        <a href="https://www.twitter.com" target="_blank">
+            <img src="images/twitter.svg" alt="twitter icon">
+        </a>
+    </footer>
+    <script src="index.js"></script>
+
+</body>
+</html>
