Persnoal Website Updates

--- a/about.html
+++ b/about.html
@@ -39,14 +39,12 @@
                         <p>Some of my favorite hiking spots include the Appalachian Trail, Yosemite National Park, and the Rocky Mountains.</p>
                         <p>Hiking not only keeps me physically active but also provides a sense of peace and tranquility.</p>
                     <section class="about-content2">
-                        <h2>Photography</h2>
-                        
-                         <img src="images/photography.jpg" alt="Camera and photography equipment">
-                            
-                                <p>Photography is a passion of mine. I love capturing moments and telling stories through images.</p>
-                                <p>From landscapes to portraits, I enjoy experimenting with different styles and techniques.</section>
-                                <p>My camera is always with me, ready to capture the beauty of the world around me.</p>
-                                <p>Photography allows me to express my creativity and share my perspective with others.</p>
+                        <h2>Photography</h2>           
+                        <img src="images/photography.jpg" alt="Camera and photography equipment">   
+                        <p>Photography is a passion of mine. I love capturing moments and telling stories through images.</p>
+                        <p>From landscapes to portraits, I enjoy experimenting with different styles and techniques.</section>
+                        <!-- <p>My camera is always with me, ready to capture the beauty of the world around me.</p>
+                        <p>Photography allows me to express my creativity and share my perspective with others.</p> -->
 
                     </section>
                     <section class="about-content3">
